--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -2,83 +2,83 @@
 $terminal = uwsm app -- ghostty
 $browser = omarchy-launch-browser
 
-bindd = SUPER, return, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
-bindd = SUPER SHIFT, F, File manager, exec, uwsm app -- nautilus --new-window
-bindd = SUPER, B, Browser, exec, $browser
-bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
-bindd = SUPER, M, Music, exec, omarchy-launch-or-focus spotify
-bindd = SUPER, N, Editor, exec, omarchy-launch-editor
-bindd = SUPER, T, Activity, exec, $terminal -e btop
-bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
-bindd = SUPER, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- obsidian -disable-gpu --enable-wayland-ime"
-bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
+bindd = SUPER, RETURN, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
+bindd = SUPER SHIFT ALT, F, File manager, exec, uwsm app -- nautilus --new-window
+bindd = SUPER SHIFT, B, Browser, exec, $browser
+bindd = SUPER SHIFT ALT, B, Browser (private), exec, $browser --private
+bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-or-focus spotify
+bindd = SUPER SHIFT, N, Editor, exec, omarchy-launch-editor
+bindd = SUPER SHIFT, T, Activity, exec, $terminal -e btop
+bindd = SUPER SHIFT, D, Docker, exec, $terminal -e lazydocker
+bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- obsidian -disable-gpu --enable-wayland-ime"
+bindd = SUPER SHIFT, slash, Passwords, exec, uwsm app -- 1password
 
 # If your web app url contains #, type it as ## to prevent hyperland treat it as comments
-bindd = SUPER, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.com/"
-bindd = SUPER, G, WhatsApp, exec, omarchy-launch-webapp "https://web.whatsapp.com/"
+bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.com/"
+bindd = SUPER SHIFT, G, WhatsApp, exec, omarchy-launch-webapp "https://web.whatsapp.com/"
 
-unbind = SUPER, P
-bindd = SUPER, P, Screenshot of region, exec, omarchy-cmd-screenshot
+unbind = SUPER SHIFT, P
+bindd = SUPER SHIFT, P, Screenshot of region, exec, omarchy-cmd-screenshot
 
 # Restart kanshi
-bind = SUPER, F12, exec, bash -c 'kanshi &'
+bind = SUPER SHIFT, F12, exec, bash -c 'kanshi &'
 
 # Mouse gesture button
 bind = , mouse:277, exec, wtype -M ctrl -k w -m ctrl
 
 # Optional: bind a key to reload kanshi if needed
-bind = SUPER, Đ, exec, pkill kanshi && kanshi
+bind = SUPER SHIFT, Đ, exec, pkill kanshi && kanshi
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
-# unbind = SUPER, SPACE
-# bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
+# unbind = SUPER SHIFT, SPACE
+# bindd = SUPER SHIFT, SPACE, Omarchy menu, exec, omarchy-menu
 
 # i3 compat
 
 # Window focus movement (vim-style)
-unbind = SUPER, K
-bind = SUPER, H, movefocus, l
-bind = SUPER, J, movefocus, d
-bind = SUPER, K, movefocus, u
-bind = SUPER, L, movefocus, r
+unbind = SUPER SHIFT, K
+bind = SUPER SHIFT, H, movefocus, l
+bind = SUPER SHIFT, J, movefocus, d
+bind = SUPER SHIFT, K, movefocus, u
+bind = SUPER SHIFT, L, movefocus, r
 
 # Window focus movement (arrow keys)
-bind = SUPER, left, movefocus, l
-bind = SUPER, down, movefocus, d
-bind = SUPER, up, movefocus, u
-bind = SUPER, right, movefocus, r
+bind = SUPER SHIFT, left, movefocus, l
+bind = SUPER SHIFT, down, movefocus, d
+bind = SUPER SHIFT, up, movefocus, u
+bind = SUPER SHIFT, right, movefocus, r
 
 # Move focused window (vim-style)
-bind = SUPER SHIFT, H, movewindow, l
-bind = SUPER SHIFT, J, movewindow, d
-bind = SUPER SHIFT, K, movewindow, u
-bind = SUPER SHIFT, L, movewindow, r
+bind = SUPER SHIFT ALT, H, movewindow, l
+bind = SUPER SHIFT ALT, J, movewindow, d
+bind = SUPER SHIFT ALT, K, movewindow, u
+bind = SUPER SHIFT ALT, L, movewindow, r
 
 # Move focused window (arrow keys)
-bind = SUPER SHIFT, left, movewindow, l
-bind = SUPER SHIFT, down, movewindow, d
-bind = SUPER SHIFT, up, movewindow, u
-bind = SUPER SHIFT, right, movewindow, r
+bind = SUPER SHIFT ALT, left, movewindow, l
+bind = SUPER SHIFT ALT, down, movewindow, d
+bind = SUPER SHIFT ALT, up, movewindow, u
+bind = SUPER SHIFT ALT, right, movewindow, r
 
 # Layout controls
-unbind = SUPER, V
-bind = SUPER, V, togglesplit  # Toggle split direction (equivalent to i3's split v/h)
-bind = SUPER, F, fullscreen, 0  # Fullscreen toggle
+unbind = SUPER SHIFT, V
+bind = SUPER SHIFT, V, togglesplit  # Toggle split direction (equivalent to i3's split v/h)
+bind = SUPER SHIFT, F, fullscreen, 0  # Fullscreen toggle
 
 # Workspace switching
-bind = SUPER, 1, workspace, 1
-bind = SUPER, 2, workspace, 2
-bind = SUPER, 3, workspace, 3
-bind = SUPER, 4, workspace, 4
-bind = SUPER, 5, workspace, 5
-bind = SUPER, 6, workspace, 6
-bind = SUPER, 7, workspace, 7
-bind = SUPER, 8, workspace, 8
-bind = SUPER, 9, workspace, 9
-bind = SUPER, 0, workspace, 10
+bind = SUPER SHIFT, 1, workspace, 1
+bind = SUPER SHIFT, 2, workspace, 2
+bind = SUPER SHIFT, 3, workspace, 3
+bind = SUPER SHIFT, 4, workspace, 4
+bind = SUPER SHIFT, 5, workspace, 5
+bind = SUPER SHIFT, 6, workspace, 6
+bind = SUPER SHIFT, 7, workspace, 7
+bind = SUPER SHIFT, 8, workspace, 8
+bind = SUPER SHIFT, 9, workspace, 9
+bind = SUPER SHIFT, 0, workspace, 10
 
 # Resize windows (similar to i3's resize mode)
-binde = SUPER CTRL, H, resizeactive, -10 0
-binde = SUPER CTRL, L, resizeactive, 10 0
-binde = SUPER CTRL, K, resizeactive, 0 -10
-binde = SUPER CTRL, J, resizeactive, 0 10
+binde = SUPER SHIFT CTRL, H, resizeactive, -10 0
+binde = SUPER SHIFT CTRL, L, resizeactive, 10 0
+binde = SUPER SHIFT CTRL, K, resizeactive, 0 -10
+binde = SUPER SHIFT CTRL, J, resizeactive, 0 10
