--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,6 +45,10 @@ set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
+# popup fish
+unbind f
+bind f display-popup
+
 # vim-like pane switching
 bind -r ^ last-window
 bind -r k select-pane -U
