--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -2,7 +2,7 @@
 $terminal = uwsm app -- ghostty
 $browser = omarchy-launch-browser
 
-bindd = SUPER, RETURN, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
+bindd = SUPER, RETURN, Terminal, exec, $terminal --dir="$(omarchy-cmd-terminal-cwd)"
 bindd = SUPER SHIFT ALT, F, File manager, exec, uwsm app -- nautilus --new-window
 bindd = SUPER SHIFT, B, Browser, exec, $browser
 bindd = SUPER SHIFT ALT, B, Browser (private), exec, $browser --private
