--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -38,6 +38,7 @@
             "7": "7",
             "8": "8",
             "9": "9",
+            "10": "0",
             "active": "󱓻"
         },
         "persistent-workspaces": {
@@ -65,7 +66,7 @@
     "cpu": {
         "interval": 5,
         "format": "󰍛 {usage}%",
-        "on-click": "xdg-terminal-exec btop"
+        "on-click": "omarchy-launch-or-focus-tui btop"
     },
     "clock": {
         "format": "{:%A, %d.%m.%Y. | %H:%M}",
@@ -152,13 +153,14 @@
     "bluetooth": {
         "format": "",
         "format-disabled": "󰂲",
-        "format-connected": "",
+        "format-connected": "󰂱",
+        "format-no-controller": "",
         "tooltip-format": "Devices connected: {num_connections}",
-        "on-click": "blueberry"
+        "on-click": "omarchy-launch-bluetooth"
     },
     "pulseaudio": {
         "format": "{icon}",
-        "on-click": "xdg-terminal-exec --app-id=com.omarchy.Wiremix -e wiremix",
+        "on-click": "omarchy-launch-or-focus-tui wiremix",
         "on-click-right": "pamixer -t",
         "tooltip-format": "Playing at {volume}%",
         "scroll-step": 5,
