--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -33,6 +33,9 @@ bind = SUPER SHIFT, Đ, exec, pkill kanshi && kanshi
 # unbind = SUPER SHIFT, SPACE
 # bindd = SUPER SHIFT, SPACE, Omarchy menu, exec, omarchy-menu
 
+# System controls
+bindd = SUPER SHIFT, S, Suspend, exec, systemctl suspend
+
 # i3 compat
 
 # Window focus movement (vim-style)
